--- a/public/index.ejs
+++ b/public/index.ejs
@@ -2,21 +2,15 @@
 <html>
 
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Home</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
+    <%- include('layout/header.ejs') %>
 </head>
 
 <body>
-    
+    <%- include('layout/nav.ejs') %>
+
+    <%- include('layout/footer.ejs') %>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 </body>
 
 </html>
