--- a/public/ticket/add.ejs
+++ b/public/ticket/add.ejs
@@ -9,7 +9,7 @@
 <body>
     <%- include('../layout/nav.ejs') %>
 
-    <%= Object.keys(errors).length %>
+    
 
     <div class="container">
         <div class="text-center mt-5">
@@ -17,15 +17,18 @@
             <p>Entrez votre problème et l'assistance fera son possible pour le régler</p>
         </div>
 
-        <% for(var i=0; i < errors.length; i++) { %>
+        <% if (Object.keys(errors).length > 0) { %>
         <div class="alert alert-danger col-md-6 offset-3" role="alert">
             <h5>Erreur(s) :</h5>
+            </ul>
             <ul>
+                <% for(var i=0; i < errors.length; i++) { %>
                 <li><%= errors[i].msg %></li>
+                <% } %>
             </ul>
         </div>
         <% } %>
-        
+
         <form action="" method="POST" class="mt-5 col-md-6 offset-3">
             <div class="form-group">
                 <label for="title">Titre *</label>
