fix conflict and improve style of footer

--- a/public/layout/footer.ejs
+++ b/public/layout/footer.ejs
@@ -1,71 +1,47 @@
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-<<<<<<< HEAD
-
 <!-- Footer -->
-<footer class="page-footer font-small blue-grey lighten-3">
+<footer class="footer">
 
-    <!-- Footer Links -->
-    <div class="container-fluid text-center text-md-left">
-  
-      <!-- Grid row -->
-      <div class="row">
-  
-        <!-- Grid column -->
-        <div class="col-md-6 mt-md-0 mt-3">
-  
-          <!-- Content -->
-          <h5 class="text-uppercase">Smith and Jones</h5>
-          <p>SOS est votre nouveau moyen de régler vos porblèmes.</p>
-  
+    <div class="container">
+        <div class="d-flex justify-content-center">
+
+            <div class="row">
+                <div class="mt-3 px-5">
+
+                    <h5 class="text-uppercase">Smith and Jones</h5>
+                    <p>SOS est votre nouveau moyen de régler vos porblèmes.</p>
+
+                </div>
+
+                <div class="mt-3 px-5">
+
+                    <h5 class="text-uppercase">Entreprise</h5>
+
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="/RGPD">RGPD</a>
+                        </li>
+                        <li>
+                            <a href="#!">Mentions légales</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
         </div>
-        <!-- Grid column -->
-  
-        <hr class="clearfix w-100 d-md-none pb-3">
-  
-        
-  
-        <!-- Grid column -->
-        <div class="col-md-3 mb-md-0 mb-3">
-  
-          <!-- Links -->
-          <h5 class="text-uppercase">Entreprise</h5>
-  
-          <ul class="list-unstyled">
-            <li>
-              <a href="/RGPD">RGPD</a>
-            </li>
-            <li>
-              <a href="#!">Mentions légales</a>
-            </li>
-         
-          </ul>
-  
-        </div>
-        <!-- Grid column -->
-  
-      </div>
-      <!-- Grid row -->
-  
     </div>
-    <!-- Footer Links -->
-  
-    <!-- Copyright -->
-    
+
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="https://mdbootstrap.com/education/bootstrap/"> SOSSmithandJones.com</a>
+        <a href="https://mdbootstrap.com/education/bootstrap/">SOSSmithandJones.com</a>
     </div>
-    <!-- Copyright -->
-  
-  </footer>
-  <!-- Footer -->
-=======
- 
->>>>>>> 10ed39975d82e2e8640bb7e8758ed3826ee33b1c
+
+</footer>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
