--- a/public/index.ejs
+++ b/public/index.ejs
@@ -20,6 +20,10 @@
 
   <% var randomNum =  Math.floor(Math.random() * Math.floor(2)); %>
 
+  <% for ( ticket of tickets){ %>
+    <%= ticket.DESCRIPTION %>
+  <% } %>
+  
   <% if (randomNum==0) { %>
   <div class="CardTicket card text-white bg-dark mb-3">
     <div class="card-header bg-success">
