--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -37,7 +37,7 @@
     background-color: #5F6469;
     z-index: -5;
     width: 100%;
-    height: 92.8%;
+    height: 100%;
     animation: 1s ease-out 0s 1 slideInFromTop;
 
 }
@@ -47,7 +47,7 @@
         transform: translateY(-100%);
     }
     100% {
-        transform: translateY(0);
+        transform: translateY(0%);
     }
 }
 
