--- a/public/ticket/CRUD/read.ejs
+++ b/public/ticket/CRUD/read.ejs
@@ -4,6 +4,7 @@
 
 <head>
     <title>Home</title>
+    
     <%- include('../../layout/header.ejs') %>
 </head>
 
@@ -13,36 +14,55 @@
 
     <div class="bodyread">
 
-        <p class="posteTicket text-white">Poste 451</p>
+       
+         
+  <% for (var ticket of tickets){ %>
+    <% if(idticket == ticket.ID){%>
 
-
-        <p class="detailTicket text-white"> détails </p>
-
-
-
-
-
-        <h5 class="text-white">Problème d'écran</h5>
-        <p class="text-white">écran du pc noir, ne veux pas s'allumer.</p>
-        <div class="text-white">Urgence : 4</div>
+    <div class="CardTicket card text-white bg-dark mb-3">
+        <% if (ticket.STATUS == "en cours"){ %>
+          <div class="card-header bg-success">
+              <% } %>
+      <% if (ticket.STATUS == "terminé"){ %>
+        <div class="card-header bg-danger">
+          <% } %>
+    
+        <% for (var poste of postes){ %>
+          <% if (poste.ID_poste == ticket.ID_poste) { %>
+          <p class="posteTicket"><%=poste.CODE%></p>
+          <% } %>
+        <% } %>
+        <a class=" detailTicket nav-link" href="/ticket/read/<%= ticket.ID_ticket%>">détails</a>
+    
+  
+      </div>
+  
+      <div class="card-body">
+        <h5 class="card-title"><%=ticket.TITRE.toUpperCase()%></h5>
+        <p class="card-text"><%= ticket.DESCRIPTION %></p>
+        <div class="card-footer urgence">urgence : <%=ticket.PRIORITE%></div>
         <svg class="icondownload bi bi-arrow-down" width="3em" height="3em" viewBox="0 0 20 20" fill="currentColor"
-            xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd"
-                d="M6.646 11.646a.5.5 0 01.708 0L10 14.293l2.646-2.647a.5.5 0 01.708.708l-3 3a.5.5 0 01-.708 0l-3-3a.5.5 0 010-.708z"
-                clip-rule="evenodd"></path>
-            <path fill-rule="evenodd" d="M10 4.5a.5.5 0 01.5.5v9a.5.5 0 01-1 0V5a.5.5 0 01.5-.5z" clip-rule="evenodd">
-            </path>
+          xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd"
+            d="M6.646 11.646a.5.5 0 01.708 0L10 14.293l2.646-2.647a.5.5 0 01.708.708l-3 3a.5.5 0 01-.708 0l-3-3a.5.5 0 010-.708z"
+            clip-rule="evenodd"></path>
+          <path fill-rule="evenodd" d="M10 4.5a.5.5 0 01.5.5v9a.5.5 0 01-1 0V5a.5.5 0 01.5-.5z" clip-rule="evenodd">
+          </path>
         </svg>
+      </div>
+    </div>
+    <% } %>   
+<% } %>
+
+
+
+
+
     </div>
 
 
 
 
-    </div>
-
-
-
-    <%- include('../../layout/footer.ejs') %>
 </body>
 
 </html>
