--- a/public/ticket/CRUD/create.ejs
+++ b/public/ticket/CRUD/create.ejs
@@ -50,7 +50,7 @@
 
             <div class="form-group">
                 <label for="description">Description *</label>
-                <textarea name="description" id="" rows="3" class="form-control" required></textarea>
+                <textarea name="description" id="description" rows="3" class="form-control" required></textarea>
             </div>
 
             <div class="form-group">
