--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,7 @@
+.bg-gray {
+    background-color: #f5f5f5;
+}
+
 .titre1 {
     margin-left: 10%;
     margin-top: 2%;
@@ -47,11 +51,6 @@
     100% {
         transform: translateY(0%);
     }
-}
-
-
-.container {
-    max-width: 960px;
 }
 
 .border-top {
