--- a/public/layout/footer.ejs
+++ b/public/layout/footer.ejs
@@ -8,7 +8,7 @@
                 <div class="mt-3 px-5">
 
                     <h5 class="text-uppercase">Smith and Jones</h5>
-                    <p>SOS est votre nouveau moyen de régler vos porblèmes.</p>
+                    <p>SOS est votre nouveau moyen de régler vos problèmes.</p>
 
                 </div>
 
