solve probleme of responsive design

--- a/public/auth/login.ejs
+++ b/public/auth/login.ejs
@@ -9,14 +9,14 @@
 <body>
     <%- include('../layout/nav.ejs') %>
 
-    <div class="container">
-        <form action="" method="POST" class="mt-5 col-md-6 offset-3">
+    <div class="container my-5">
+        <form action="" method="POST" class="col-md-6 offset-md-3">
             <div class="form-group">
-                <label for="">Email</label>
+                <label for="email">Email</label>
                 <input type="text" class="form-control" name="email" id="email">
             </div>
             <div class="form-group">
-                <label for="">Mot de passe</label>
+                <label for="password">Mot de passe</label>
                 <input type="password" class="form-control" name="password" id="password">
             </div>
             <div class="form-group">
